# pangobot

./: Dockerfile  cast.js  conditions.js  dice.js  equipment.js  help.js  index.js  package-lock.json  package.json  pyproject.toml  rolls.js  spells.js  stats.js
.github/workflows/: deploy.yml  publish.yml
content/: conditions.yaml  equipment.yaml  spells.yaml
pangobot/: main.py
tests/: test_pangobot.py
